--- a/friendvest/package.json
+++ b/friendvest/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^11.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "esbuild": "^0.24.0",
     "lucide-vue-next": "^0.454.0",
     "nuxt": "^3.14.159",
     "radix-vue": "^1.9.9",
