--- a/friendvest/package.json
+++ b/friendvest/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/supabase": "^1.4.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@supabase/supabase-js": "^2.46.1",
     "@vueuse/core": "^11.2.0",
